5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4185/executions/1644_2447.log
== TEST (2019-04-15 17:39:17) 
-- CODE:
preco = float(input("valor do preco"))
pag= float(input("valor pag"))

 if (preco > pag):
	print("falta" , preco-pag,2)
	
else:
	print("troco de" , pag-preco,2)
-- ERROR:
File "XXXX", line 4
    if (preco > pag):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:39:47) 
-- CODE:
preco = float(input("valor do preco"))
pag= float(input("valor pag"))

if (preco > pag):
	print("falta" , preco-pag,2)
	
else:
	print("troco de" , pag-preco,2)
-- OUTPUT:
falta 26.0 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:40:47) 
-- CODE:
preco = float(input("valor do preco"))
pag= float(input("valor pag"))

if (preco > pag):
	print("falta" , round(preco-pag,2))
	
else:
	print("troco de" , round(pag-preco,2))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:41:06) 
-- CODE:
preco = float(input("valor do preco"))
pag= float(input("valor pag"))

if (preco > pag):
	print("falta" , round(preco-pag,2))
	
else:
	print("troco de" , round(pag-preco,2))
-- EXECUTION TIME:
0.231346
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:43:35) 
-- CODE:
preco = float(input("valor do preco"))
pag= float(input("valor pag"))
X = preco - pag
Y = pag - preco
if (pag):
	print("Falta" , round(X,2))
	
else:
	print("Troco de" , round(Y,2))
-- EXECUTION TIME:
0.169411
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Falta -28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Falta 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:43:57) 
-- CODE:
preco = float(input("valor do preco"))
pag= float(input("valor pag"))
X = preco - pag
Y = pag - preco
if (preco > pag):
	print("Falta" , round(X,2))
	
else:
	print("Troco de" , round(Y,2))
-- EXECUTION TIME:
0.212635
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
